--- a/views/author_list.pug
+++ b/views/author_list.pug
@@ -6,7 +6,7 @@ block content
   each author in author_list
     li
       a(href=author.url) #{author.name}
-      |  (#{author.memento})
+      |  (#{author.lifespan})
   
 
   else
